--- a/KafeBerlin.Data/KafeBerlin.Data.csproj
+++ b/KafeBerlin.Data/KafeBerlin.Data.csproj
@@ -43,5 +43,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="benioku.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
