--- a/KafeBerlin.Ui/KafeBerlin.Ui.csproj
+++ b/KafeBerlin.Ui/KafeBerlin.Ui.csproj
@@ -58,14 +58,19 @@
     <Compile Include="GecmisSiparislerForm.Designer.cs">
       <DependentUpon>GecmisSiparislerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="KafeYeri.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Siparis.cs" />
+    <Compile Include="SiparisDetay.cs" />
+    <Compile Include="SiparisDurum.cs" />
     <Compile Include="SiparisForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SiparisForm.Designer.cs">
       <DependentUpon>SiparisForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Urun.cs" />
     <Compile Include="UrunlerForm.cs">
       <SubType>Form</SubType>
     </Compile>
