--- a/KafeBerlin.Ui/KafeBerlin.Ui.csproj
+++ b/KafeBerlin.Ui/KafeBerlin.Ui.csproj
@@ -58,19 +58,14 @@
     <Compile Include="GecmisSiparislerForm.Designer.cs">
       <DependentUpon>GecmisSiparislerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="KafeYeri.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Siparis.cs" />
-    <Compile Include="SiparisDetay.cs" />
-    <Compile Include="SiparisDurum.cs" />
     <Compile Include="SiparisForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SiparisForm.Designer.cs">
       <DependentUpon>SiparisForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Urun.cs" />
     <Compile Include="UrunlerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +105,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KafeBerlin.Data\KafeBerlin.Data.csproj">
+      <Project>{b3c8e37c-6515-45c4-aeb2-b676cf54ee2f}</Project>
+      <Name>KafeBerlin.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
